# fastmm

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README_TESTING.md  build_wheel.ps1  example_combined.py  example_complete.py  example_matching.py  generate_stubs_for_wheel.py  pyproject.toml  setup.py  test_basic.py  test_build_local.ps1  test_cibuildwheel.ps1  test_cibuildwheel.sh  test_cibuildwheel_macos.ps1  test_fastmm.py  test_local_build.ps1  test_wheel_contents.ps1
.github/workflows/: build-wheels.yml  test-wheels.yml
cmake/: FindConda.cmake
python/: .gitignore  CMakeLists.txt
python/fastmm/: .gitignore  __init__.py  matcher.py
python/fmm/: __init__.py  _version.py  matcher.py
python/pybind11/: CMakeLists.txt  fastmm_bindings.cpp  fmm_bindings.cpp  pyfmm_bindings.cpp
src/: CMakeLists.txt  fmm-api.hpp
src/algorithm/: geom_algorithm.cpp  geom_algorithm.hpp
src/core/: geometry.cpp  geometry.hpp  gps.hpp
src/mm/: composite_graph.cpp  composite_graph.hpp  mm_type.hpp  transition_graph.cpp  transition_graph.hpp
src/mm/fmm/: fmm_algorithm.cpp  fmm_algorithm.hpp  ubodt.cpp  ubodt.hpp  ubodt_gen_algorithm.cpp  ubodt_gen_algorithm.hpp
src/mm/stmatch/: stmatch_algorithm.cpp  stmatch_algorithm.hpp
src/network/: bidirectional_network_graph.cpp  bidirectional_network_graph.hpp  graph.hpp  heap.hpp  network.cpp  network.hpp  network_graph.cpp  network_graph.hpp  rtree.cpp  rtree.hpp  type.hpp
src/util/: debug.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  algorithm_test.cpp  fmm_test.cpp  network_graph_test.cpp  network_test.cpp
