[build-system]
requires = [
    "scikit-build-core>=0.8.0",
    "pybind11>=2.12.0",
    "setuptools-scm>=8.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "fastmm"
dynamic = ["version"]
description = "Fast Map Matching - High-performance map matching library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "kodonnell"},
]
keywords = ["map-matching", "gps", "trajectory", "routing", "GIS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
matcher = []
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/kodonnell/fastmm"
Documentation = "https://github.com/kodonnell/fastmm"
Repository = "https://github.com/kodonnell/fastmm"

[tool.scikit-build]
# Scikit-build-core configuration for CMake integration
cmake.verbose = true
cmake.build-type = "Release"
install.components = ["python"]
wheel.install-dir = "fastmm"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
write_to = "python/fastmm/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 120
target-version = "py38"
